# zeal-dev-environment

./: .clang-format  .env  .gitignore  .gitmodules  Dockerfile  Dockerfile.builder  README.md  build.sh  docker-compose.yml  entrypoint.sh  zde
.github/workflows/: python-unit.yml
docs/: README.md  activate.md  cmake.md  config.md  create.md  deps.md  emulator.md  image.md  interactive.md  kernel.md  make.md  playground.md  rebuild.md  test.md  tui.md  update.md
docs/tui/: README.md  cli-differences.md  navigation.md  screens.md
etc/: supervisord.conf
etc/supervisor.d/: emulator.ini  playground.ini
github/setup-zde/: action.yml
home/: .bashrc  .gitignore  kernel.sh  motd.txt  zde.txt  zsync.sh
home/templates/: cookiecutter.yml  create.sh
home/templates/zealos/: cookiecutter.json
home/templates/zealos-gnuas/: cookiecutter.json
home/templates/zealos-sdcc/: cookiecutter.json
home/templates/zealos-sdcc/{{ cookiecutter.name | lower | replace(' ', '-') }}/: CMakeLists.txt  README.md
home/templates/zealos-z88dk/: cookiecutter.json
home/templates/zealos/{{ cookiecutter.name | lower | replace(' ', '-') }}/: CMakeLists.txt  Makefile  README.md  {{ cookiecutter.name | lower | replace(' ', '-') }}.txt
home/templates/zealos/{{ cookiecutter.name | lower | replace(' ', '-') }}/src/: main.c
home/templates/zgdk/: cookiecutter.json
home/zde/: __init__.py  _service.py  cmake.py  common.py  create.py  deps.yml  emulator.py  image.py  kernel.py  make.py  parser.py  playground.py  process.py  romdisk.py  shell.py  zde.py
home/zde/cmds/: _service.py  cmake.py  config.py  create.py  deps.py  emulator.py  image.py  kernel.py  make.py  romdisk.py  (+5 more)
includes/: vscode.h
(+83 files in other folders)
